wordpress/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: wordpress
  labels:
    app: wordpress
    type: frontend
spec:
  replicas: 10
  selector:
    matchLabels:
      app: wordpress
      type: frontend
  template:  
    metadata:
      labels:
        app: wordpress
        type: frontend
    spec:
      containers:
        - name: wordpress
          image: wordpress
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          volumeMounts:
             - mountPath: "/var/www/html/wp-content"
               name: vol-wordpress
      volumes:
        - name: vol-wordpress
          persistentVolumeClaim:
            claimName: wordpress-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress
  labels:
    app: wordpress
    type: frontend
spec:
  selector:
    app: wordpress
    type: frontend
  ports:
  - name: http-sv-port 
    port: 8081
    targetPort: http-port
  - name: https-sv-port
    port: 443
    targetPort: https-port
  type: ClusterIP
